# anyrag

./: .dockerignore  .env.example  .gitignore  Cargo.toml  EXAMPLES.md  HOW.md  IDEA.md  MEMORAG_PLAN.md  NEXT.md  NOTION.md  NOW.md  PLAN.MD  PLAN.md  README.md  RULES.md  TASK.md  TODO.md  TOHAVE.md  cloudbuild.yaml  deploy.sh  jup-ag-jupiter-lend-617e51682293c1bf37d53945d86f6ccb583fbd3e-src.md  jup-ag-jupiter-swap-api-client-70aaffd957d59c19588df86e92ce3b94f24f7d0b-src.md  res.txt  rss.sh  tursodatabase-turso-v0.1.5-context.md  tursodatabase-turso-v0.2.0-pre.3-context.md  tursodatabase-turso-v0.5.3-examples.md  zed-industries-zed-v1.1.3-pre-examples.md
.plans/: 001_github_filters.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: api_client.rs  app.rs  auth.rs  firebase.rs  github.rs  main.rs  process.rs  ui.rs
crates/cli/tests/: process_test.rs
crates/core-access/: Cargo.toml
crates/core-access/src/: lib.rs
crates/firebase/: Cargo.toml
crates/firebase/src/: lib.rs
crates/github/: Cargo.toml  README.md
crates/github/src/: cli.rs  lib.rs
crates/github/src/ingest/: crawler.rs  extractor.rs  mod.rs  search_logic.rs  storage.rs  types.rs
crates/github/tests/: extractor_test.rs  github_ingest_test.rs  github_search_logic_test.rs
crates/github/tests/common/: mod.rs
crates/gof/: .env.example  Cargo.toml  PLAN.md  README.md
crates/gof/src/: lib.rs  main.rs
crates/gof/tests/: gof_test.rs
crates/html/: Cargo.toml  README.md
crates/html/src/: lib.rs
crates/html/tests/: integration_test.rs
crates/lib/: Cargo.toml  README.md
crates/lib/examples/: knowledge.rs  query.rs  zai_calculator.rs
crates/lib/src/: constants.rs  curator.rs  embedding.rs  errors.rs  executor.rs  lib.rs  prompts.rs  rerank.rs  search.rs  types.rs
crates/lib/src/github_ingest/: crawler.rs  extractor.rs  mod.rs  search_logic.rs  storage.rs  types.rs
crates/lib/src/graph/: mod.rs  types.rs
crates/lib/src/ingest/: articles.rs  embedding.rs  firebase.rs  knowledge.rs  markdown.rs  mod.rs  pdf.rs  rss.rs  sheet_faq.rs  sheets.rs  state_manager.rs  text.rs  traits.rs  types.rs
crates/lib/src/ingest/shared/: google_sheets.rs  mod.rs
crates/lib/src/prompts/: core.rs  knowledge.rs  mod.rs  pdf.rs  rss.rs  tasks.rs
crates/lib/src/providers/: bigquery.rs  factory.rs  mod.rs
crates/lib/src/providers/ai/: embedding.rs  gemini.rs  local.rs  mod.rs
crates/lib/src/providers/ai/zai/: client.rs  completion.rs  mod.rs  provider.rs
crates/lib/src/providers/ai/zai_provider/: mod.rs
crates/lib/src/providers/db/: bigquery.rs  mod.rs  storage.rs
crates/lib/src/providers/db/sqlite/: mod.rs  sql.rs
crates/lib/tests/: ai_context_test.rs  github_ingest_test.rs  github_search_logic_test.rs  ingest_test.rs  integration_test.rs  knowledge_graph_test.rs  knowledge_search_logic_test.rs  logic_test.rs  memorag_test.rs  prompts.rs  rerank_test.rs  server_logic_test.rs  sqlite_provider_test.rs  vector_search_logic_test.rs  web_ingest_test.rs  zai_test.rs
crates/lib/tests/common/: mod.rs
crates/lib/tests/data/: noisy_content.md
crates/lib/tests/github_ingest/: extractor_test.rs
crates/lib/tests/zai/: tool_calling_test.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs
crates/notion/: Cargo.toml  README.md
crates/notion/examples/: ingest_notion.rs
crates/notion/src/: lib.rs
crates/notion/tests/: notion_ingest_test.rs
crates/pdf/: Cargo.toml  README.md
crates/pdf/src/: lib.rs
crates/pdf/tests/: pdf_ingest_test.rs
crates/pdf/tests/common/: mod.rs
crates/pdf/tests/common/helpers/: mod.rs
crates/rss/: Cargo.toml
crates/rss/src/: lib.rs
crates/rss/tests/: rss_ingest_test.rs
crates/server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.gemini.yml  config.local.yml  config.prompt.yml
crates/server/examples/: backfill_metadata.rs  bigquery_prompt.rs  knowledge_graph_precision.rs  knowledge_prompt.rs  knowledge_prompt2.rs  sheet_faq_date_sensitive.rs  sheet_faq_prompt.rs  sheet_generic_prompt.rs  sheet_prompt.rs
crates/server/src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  providers.rs  router.rs  state.rs  types.rs
crates/server/src/auth/: middleware.rs
crates/server/src/handlers/: admin_handlers.rs  auth_handlers.rs  db_handlers.rs  document_handlers.rs  general.rs  generation_handlers.rs  generation_transaction_handlers.rs  generation_types.rs  graph_handlers.rs  ingest.rs  knowledge.rs  mod.rs  search.rs
crates/server/src/handlers/ingest/: firebase.rs  firebase_types.rs  github.rs  github_types.rs  mod.rs  pdf.rs  rss.rs  sheet.rs  text.rs  web.rs
crates/server/tests/: admin_test.rs  common.rs  config_test.rs  content_type_test.rs  e2e_hybrid_search_test.rs  e2e_knowledge_graph_test.rs  e2e_prompt_test.rs  e2e_search_test.rs  e2e_temporal_reasoning_test.rs  embedding_test.rs  faq_ingestion_test.rs  generation_agent_test.rs  github_ingest_test.rs  github_search_test.rs  ingest_rss_test.rs  ingest_test.rs  ingest_text_test.rs  knowledge_graph_e2e_test.rs  knowledge_graph_test.rs  knowledge_hybrid_search_test.rs  knowledge_test.rs  local_embedding_service_test.rs  override_test.rs  ownership_test.rs  pdf_ingest_test.rs  pdf_url_ingest_test.rs  prompt_override_test.rs  prompt_test.rs  server_test.rs  sheet_faq_date_test.rs  sheet_ingest_test.rs  sheet_rag_workflow_test.rs
crates/server/tests/common/: mod.rs  pdf_helper.rs
crates/sheets/: Cargo.toml
crates/sheets/src/: lib.rs
crates/sheets/tests/: sheet_ingest_test.rs
crates/sheets/tests/common/: mod.rs
crates/solana/: Cargo.toml
crates/solana/src/: generator.rs  lib.rs  types.rs
crates/solana/tests/: generation_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
crates/text/tests/: text_ingest_test.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
crates/web/tests/: web_ingest_test.rs
