[workspace]
members = ["crates/cli", "crates/core-access", "crates/github", "crates/lib", "crates/server", "crates/html", "crates/web", "crates/pdf", "crates/rss", "crates/sheets", "crates/text", "crates/firebase", "crates/markdown", "crates/gof", "crates/notion", "crates/test-utils", "crates/solana"]
resolver = "2"

[workspace.dependencies]
gcp-bigquery-client = "0.27.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
regex = "1.11.2"
serde_json = "1.0.145"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11.8"
async-trait = "0.1.89"
dyn-clone = "1.0.20"
rss = "2.0.12"
turso = { git = "https://github.com/tursodatabase/turso.git", rev = "e04938e", features = [
    "experimental_indexes",
] }
chrono = "0.4"
anyhow = "1.0"
base64 = "0.22.1"
csv = "1.3"
futures = "0.3"
dotenvy = "0.15.7"
uuid = { version = "1.18.1", features = ["v4", "serde", "v5"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
md5 = "0.8.0"
wiremock = "0.6.5"

# For server
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
