[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5.4", features = ["derive"] }

# GCP/Firebase
gcp_sdk = { version = "0.26.0", features = ["firestore"] }

# Async & Networking
tokio = { workspace = true, features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"

# Auth & System Interaction
keyring = "3.6.3"
open = "5.3.2"

# Error Handling & Logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.7"
