[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5.47", features = ["derive"] }

# GCP/Firebase
firestore = { path = "../../firestore-rs" }
gcloud-sdk = { version = "0.28", features = ["google-firestore-v1"] }

# Async & Networking
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }

# Auth & System Interaction
keyring = "3.6.3"
open = "5.3.2"

# Error Handling & Logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.7"

anyrag = { path = "../lib" }
turso.workspace = true
rustls = "0.23.31"
