[package]
name = "anyrag-firebase"
version = "0.1.0"
edition = "2021"

[dependencies]
anyrag = { path = "../lib" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
turso = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Dependencies specific to Firebase/Firestore not in the workspace root
firestore = "0.47.0"
tokio-stream = "0.1"
gcloud-sdk = { version = "0.28", features = ["google-firestore-v1"] }
