[package]
name = "anyrag-github"
version = "0.1.0"
edition = "2021"

[dependencies]
# Moved from anyrag-lib
git2 = "0.20.2"
htmd = "0.3.0"
tempfile = "3.22.0"
semver = "1.0.27"
kuchikiki = "0.8.2"
html5ever = "0.35.0"
toml = "0.9.6"
scraper = "0.24.0"
md5 = "0.8"
futures = "0.3.31"
regex = { workspace = true }

# Internal & Workspace
anyrag = { path = "../lib" }
anyrag-markdown = { path = "../markdown" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
turso = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
thiserror = { workspace = true }
async-trait.workspace = true

[dev-dependencies]
async-trait = { workspace = true }
wiremock = "0.6.5"
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "extractor_test"
path = "tests/extractor_test.rs"

[[test]]
name = "github_ingest_test"
path = "tests/github_ingest_test.rs"

[[test]]
name = "github_search_logic_test"
path = "tests/github_search_logic_test.rs"
