[package]
name = "gof"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gof"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Async
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9.7" # Match version in anyrag-github
crates_io_api = "0.12.0"

# Error Handling & Logging
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal Workspace Crates
anyrag = { path = "../lib" }
anyrag-github = { path = "../github" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.22"
