[package]
name = "anyrag"
version = "0.1.0"
edition = "2021"

[lib]
name = "anyrag"
path = "src/lib.rs"

[dependencies]
gcp-bigquery-client = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait.workspace = true
dyn-clone = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
turso = { workspace = true }
csv = { workspace = true, optional = true }
rss = { workspace = true }
dotenvy = "0.15.7"
md5 = "0.8"
pdf = { version = "0.9.0", optional = true }
anyhow.workspace = true
indradb-lib = { version = "5.0.0", optional = true, features = [
    "rocksdb-datastore",
] }
uuid = { version = "1.18.1", features = ["serde", "v5"], optional = true }
core-access = { path = "../core-access", optional = true }
gcloud-sdk = { version = "0.28", features = ["google-firestore-v1"], optional = true }
tokio-stream = { version = "0.1", optional = true }
firestore = { version = "0.47.0", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
tracing-subscriber = { workspace = true }
tempfile = "3.21.0"
anyhow = { workspace = true }

[features]
default = ["graph_db", "firebase", "pdf", "sheets"]
bigquery = ["dep:gcp-bigquery-client"]
graph_db = ["dep:indradb-lib", "dep:uuid"]
core-access = ["dep:core-access", "dep:uuid"]
firebase = ["dep:gcloud-sdk", "dep:tokio-stream", "dep:firestore"]
pdf = ["dep:pdf"]
sheets = ["dep:csv"]

[[test]]
name = "prompts"
path = "tests/prompts.rs"

[[test]]
name = "ingest_test"
path = "tests/ingest_test.rs"

[[test]]
name = "knowledge_search_logic_test"
path = "tests/knowledge_search_logic_test.rs"
required-features = ["core-access"]

[[example]]
name = "knowledge"
path = "examples/knowledge.rs"
required-features = ["core-access"]
