[package]
name = "anyrag-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal & Workspace
anyrag = { path = "../lib" }
# Re-use the LLM helper functions from the web plugin
anyrag-web = { path = "../web" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
turso = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# External
base64 = { workspace = true }
md5 = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
pdf = "0.9.0"

[dev-dependencies]
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }
