[package]
name = "anyrag-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# Internal Crate
anyrag = { path = "../lib" }
core-access = { path = "../core-access" }

# Web Framework
axum = { workspace = true }
axum-extra = { version = "0.10.1", features = ["multipart"] }

# Async runtime
tokio = { workspace = true }

# Tracing & Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

# Serde
serde = { workspace = true }
serde_json.workspace = true
turso = { workspace = true }
futures = { workspace = true }

# Other
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
chrono.workspace = true

[features]
default = ["bigquery", "graph_db"]
bigquery = ["anyrag/bigquery"]
graph_db = ["anyrag/graph_db"]

[dev-dependencies]
async-trait = { workspace = true }
dyn-clone = { workspace = true }
futures = "0.3.31"
gcp-bigquery-client = { workspace = true }
chrono = { workspace = true }
httpmock = "0.7.0"
tempfile = "3.21.0"
turso = { workspace = true }
regex = { workspace = true }
md5 = "0.8.0"
pdf-writer = "0.13.0"

[[test]]
name = "config_test"
path = "tests/config_test.rs"
harness = true

[[test]]
name = "server_test"
path = "tests/server_test.rs"
harness = true

[[test]]
name = "content_type_test"
path = "tests/content_type_test.rs"
harness = true

[[test]]
name = "ingest_test"
path = "tests/ingest_test.rs"
harness = true

[[test]]
name = "embedding_test"
path = "tests/embedding_test.rs"
harness = true

[[test]]
name = "ingest_text_test"
path = "tests/ingest_text_test.rs"
harness = true

[[test]]
name = "pdf_ingest_test"
path = "tests/pdf_ingest_test.rs"
harness = true

[[test]]
name = "pdf_url_ingest_test"
path = "tests/pdf_url_ingest_test.rs"
harness = true

[[test]]
name = "ownership_test"
path = "tests/ownership_test.rs"
harness = true
