[package]
name = "anyrag-server"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Internal Crate
anyrag = { path = "../lib", features = ["core-access", "rss"] }
core-access = { path = "../core-access" }
anyrag-github = { path = "../github" }
anyrag-web = { path = "../web" }
anyrag-pdf = { path = "../pdf" }
anyrag-rss = { path = "../rss" }
anyrag-sheets = { path = "../sheets" }
anyrag-text = { path = "../text" }

# Web Framework
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["multipart", "typed-header"] }
jsonwebtoken = "9.3.1"

# Async runtime
tokio = { workspace = true }

# Tracing & Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

# Serde
serde = { workspace = true }
serde_json.workspace = true
turso = { workspace = true }

# Other
dotenvy = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
chrono.workspace = true
regex = { workspace = true }
md5 = { workspace = true }

# Config
config = { version = "0.15.15", features = ["yaml"] }
uuid = { workspace = true }
futures = "0.3.30"

[features]
default = ["bigquery", "graph_db", "rss", "firebase"]
bigquery = ["anyrag/bigquery"]
graph_db = ["anyrag/graph_db"]
rss = ["anyrag/rss"]
firebase = ["anyrag/firebase"]

[dev-dependencies]
chrono = { workspace = true }
httpmock = "0.7.0"
jsonwebtoken = "9.3.1"
tempfile = "3.21.0"
turso = { workspace = true }
regex = { workspace = true }
serial_test = "3.2.0"
pdf-writer = "0.13.0"
uuid = { workspace = true }

[[test]]
name = "config_test"
path = "tests/config_test.rs"
harness = true

[[test]]
name = "server_test"
path = "tests/server_test.rs"
harness = true

[[test]]
name = "ingest_test"
path = "tests/ingest_test.rs"
harness = true

[[test]]
name = "embedding_test"
path = "tests/embedding_test.rs"
harness = true

[[test]]
name = "ingest_text_test"
path = "tests/ingest_text_test.rs"
harness = true

[[test]]
name = "pdf_ingest_test"
path = "tests/pdf_ingest_test.rs"
harness = true

[[test]]
name = "pdf_url_ingest_test"
path = "tests/pdf_url_ingest_test.rs"
harness = true

[[test]]
name = "ownership_test"
path = "tests/ownership_test.rs"
harness = true

[[test]]
name = "e2e_prompt_test"
path = "tests/e2e_prompt_test.rs"
harness = true

[[test]]
name = "faq_ingestion_test"
path = "tests/faq_ingestion_test.rs"
harness = true

[[test]]
name = "prompt_override_test"
path = "tests/prompt_override_test.rs"
harness = true

[[test]]
name = "generation_agent_test"
path = "tests/generation_agent_test.rs"
harness = true

[[test]]
name = "admin_test"
path = "tests/admin_test.rs"
harness = true

[[test]]
name = "github_ingest_test"
path = "tests/github_ingest_test.rs"
harness = true

[[test]]
name = "github_search_test"
path = "tests/github_search_test.rs"
harness = true

[[example]]
name = "backfill_metadata"
path = "examples/backfill_metadata.rs"
