[package]
name = "anyrag-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyrag = { path = "../lib" }

# Async
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Data & DB
turso = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# Optional dependencies for specific test types
printpdf = { version = "0.8.2", optional = true }
base64 = { workspace = true, optional = true }

[features]
pdf = ["dep:printpdf", "dep:base64"]
